--- a/package.json
+++ b/package.json
@@ -4,20 +4,19 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "12.16.1",
-    "npm": "6.13.4"
+    "node": "12.16.3",
+    "npm": "6.14.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js" 
+    "dev": "nodemon index.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.6",
+    "mongoose": "^5.11.18",
+    "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0"
   }
